# love-letter-react

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: compress-images.mjs  convert-png-to-webp.mjs  generate-icon-placeholders.mjs  generate-placeholder-images.mjs  generate-placeholder.html  generate-placeholder.py  generate-portrait.mjs  generate-simple-placeholders.mjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/assets/: lyrics.lrc
src/components/Chat/: ChatModal.tsx  ChatPage.tsx  crypto.ts  imageUtils.ts  index.ts  useChat.ts
src/components/Letter/: LetterContent.tsx  LetterPanel.tsx  index.tsx
src/components/Scene/: CameraController.tsx  DissolveParticles.tsx  FloatingPhotos.tsx  MouseRipple.tsx  PhotoStoryOverlay.tsx  ShootingStars.tsx  index.tsx
src/components/UI/: BackToStories.tsx  EasterEgg3DBackground.tsx  EasterEggDebug.tsx  EasterEggModal.tsx  EasterEggScene.tsx  EndingScreen.tsx  EnterButton.tsx  IntroSequence.tsx  KeyHint.tsx  Lyrics.tsx  MemoryButton.tsx  MissedEggPrompt.tsx  MusicPlayer.tsx  NovelButton.tsx  NovelReader.tsx  PasswordScreen.tsx  PhotoPreview.tsx  StartScreen.tsx  StoryController.tsx  StoryGallery.tsx  TitleBar.tsx  ToBeContinued.tsx  index.tsx
src/config/: chatTrigger.ts  easterEggs.ts  novels.ts  photoStories.ts
src/music/: README.md
src/store/: useAppStore.ts  useEasterEggStore.ts
src/utils/: index.ts  photos.ts  useGesture.ts
